Expanded mesh implementation. Added shaders
- Mesh can now encode and decode vertex components to/from a compressed
format that significantly reduces space consumed, along with loading on
the GPU faster (yay memory block alignment!)

- The shaders included are designed for use with this compressed format.
The mesh now has a boolean that can be set to signify if it's data is
compressed, telling us we may need to decode or should be careful which
shaders we use.

- Added basic Shader compiling, linking, and pointing class that makes
dealing with shaders easy

- Added simple WASD camera for testing purposes (bit early, but w/e)

--- a/HephaestusEngine/HephaestusEngine.vcxproj.filters
+++ b/HephaestusEngine/HephaestusEngine.vcxproj.filters
@@ -13,6 +13,10 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Shader Files">
+      <UniqueIdentifier>{9710fd3d-1b3b-4025-a0b9-e8be0b73b32f}</UniqueIdentifier>
+      <Extensions>glsl;hlsl;</Extensions>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -33,6 +37,12 @@
     <ClInclude Include="mesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -47,5 +57,13 @@
     <ClCompile Include="block.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="compressed_vertex.glsl">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="compressed_fragment.glsl">
+      <Filter>Shader Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
