--- a/HephaestusEngine/HephaestusEngine.vcxproj.filters
+++ b/HephaestusEngine/HephaestusEngine.vcxproj.filters
@@ -43,6 +43,12 @@
     <ClInclude Include="shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="array3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Terrain_Gen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
