--- a/.gitignore
+++ b/.gitignore
@@ -246,3 +246,11 @@ ModelManifest.xml
 HephaestusEngine/chunkbuffers.cpp
 HephaestusEngine/test_light.h
 HephaestusEngine/test_light.cpp
+Fast_Terrain/FastNoise_Wrapper.h
+Fast_Terrain/Fast_Terrain.cpp
+Fast_Terrain/Fast_Terrain.vcxproj
+Fast_Terrain/targetver.h
+Fast_Terrain/Fast_Terrain.vcxproj.filters
+Fast_Terrain/ReadMe.txt
+Fast_Terrain/stdafx.cpp
+Fast_Terrain/stdafx.h
